# Generated by Django 5.0.2 on 2026-03-13 21:03

import django.core.validators
import django.db.models.deletion
from django.db import migrations, models


class Migration(migrations.Migration):

    initial = True

    dependencies = [
        ('empleados', '0002_alter_empleado_nombre'),
    ]

    operations = [
        migrations.CreateModel(
            name='Prestamo',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('monto', models.DecimalField(decimal_places=2, max_digits=12, validators=[django.core.validators.MinValueValidator(0.01)])),
                ('plazo_meses', models.PositiveIntegerField(validators=[django.core.validators.MinValueValidator(1), django.core.validators.MaxValueValidator(24)])),
                ('fecha_solicitud', models.DateField(auto_now_add=True, help_text='Fecha de solicitud del préstamo')),
                ('fecha_aprobacion', models.DateField(blank=True, help_text='Fecha de aprobación del préstamo', null=True)),
                ('fecha_inicio_descuento', models.DateField(blank=True, help_text='Fecha de inicio de los descuentos en nómina', null=True)),
                ('fecha_fin_descuento', models.DateField(blank=True, help_text='Fecha de fin de los descuentos en nómina', null=True)),
                ('tasa_interes_mensual', models.DecimalField(decimal_places=2, default=1.0, help_text='Tasa de interés mensual en porcentaje', max_digits=5, validators=[django.core.validators.MinValueValidator(0)])),
                ('pago_fijo_capital', models.DecimalField(decimal_places=2, help_text='Pago fijo de capital mensual', max_digits=12)),
                ('saldo_actual', models.DecimalField(decimal_places=2, help_text='Saldo pendiente del préstamo', max_digits=12)),
                ('estado', models.CharField(choices=[('SOLICITADO', 'Solicitado'), ('APROBADO', 'Aprobado'), ('ACTIVO', 'Activo'), ('CONCLUIDO', 'Concluido'), ('RECHAZADO', 'Rechazado')], default='SOLICITADO', max_length=20)),
                ('empleado', models.ForeignKey(on_delete=django.db.models.deletion.PROTECT, related_name='prestamos', to='empleados.empleado')),
            ],
        ),
        migrations.CreateModel(
            name='Abono',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('numero_abono', models.PositiveIntegerField(default=1, help_text='Número secuencial del abono')),
                ('fecha', models.DateField(auto_now_add=True, help_text='Fecha del abono')),
                ('monto_capital', models.DecimalField(decimal_places=2, default=0, help_text='Monto del abono aplicado a capital', max_digits=12)),
                ('monto_interes', models.DecimalField(decimal_places=2, default=0, help_text='Monto del abono aplicado a intereses', max_digits=12)),
                ('monto_cobrado', models.DecimalField(decimal_places=2, default=0, help_text='Monto total cobrado en este abono', max_digits=12)),
                ('saldo_actual', models.DecimalField(decimal_places=2, default=0, help_text='Saldo restante del préstamo después de este abono', max_digits=12)),
                ('prestamo', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='abonos', to='prestamos.prestamo')),
            ],
        ),
    ]
